--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/dates": "^8.1.2",
     "@mantine/hooks": "^8.1.2",
     "@mantine/notifications": "^8.1.2",
+    "axios": "^1.12.2",
     "dayjs": "^1.11.13",
     "next": "15.3.5",
     "react": "^19.0.0",
