--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.1.2",
     "@mantine/dates": "^8.1.2",
+    "@mantine/form": "^8.3.2",
     "@mantine/hooks": "^8.1.2",
     "@mantine/notifications": "^8.1.2",
     "axios": "^1.12.2",
